[package]
name = "nsys-enet"
version = "0.0.5"
authors = ["Shane Pearman <spearman@github.com>"]
license = "Apache-2.0"
description = "Rust interface for the ENet reliable UDP library"
repository = "https://github.com/spearman/enet-rs"
readme = "README.md"
edition = "2024"

[lib]
name = "enet"

[dependencies]
bitflags = "2.*"
enum_primitive = "0.1.*"
enet-sys = "1.*"

[dev-dependencies]
ctrlc = "3.*"
